samples/_failures_safe/1761006202_166b61_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_743ac1c7.c: In function ‘main’:
./samples/SAFE/__tmp_743ac1c7.c:198:5: error: expected declaration or statement at end of input
  198 |     return 0;
      |     ^~~~~~
